--- a/index.html
+++ b/index.html
@@ -45,4 +45,5 @@ Join us in revisiting the memories, the laughter, and the awe-inspiring sights w
     
 </body>
 <button class="new-game" onclick="startM()">◀ another one</button>
+    <a class="refersh" href="">🌎</a>
 </html>
