--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         
         <div>
    <p id="pText">
-    Welcome to our travel diary, a visual and emotional journey through the incredible adventures my girlfriend and I have shared around the world. Here, we invite you to embark on a virtual expedition, witnessing the beauty, culture, and love that has colored our travels.<br>
+    Welcome to our travel diary, a visual and emotional journey through the incredible adventures Kaleya and I have shared around the world. Here, you embark on a virtual expedition, witnessing the beauty, culture, and love that has colored our travels.<br>
 Traveling with a loved one is a unique experience, as it magnifies the joy of discovery and the warmth of shared moments. From the bustling streets of vibrant cities to the tranquil landscapes of serene nature, each destination holds a story of love and exploration.<br>
-Through this website, we aim to share our passion for wanderlust, culture, and connection. Each photograph and story is a glimpse into our shared experiences, from the exhilarating highs of adventure to the quiet, cherished moments of togetherness.<br>
-Join us in revisiting the memories, the laughter, and the awe-inspiring sights we've encountered on our journey of love. Whether you're seeking travel inspiration, tips for couples on the road, or simply the joy of vicarious exploration, we hope our adventures will inspire your own wanderlust and deepen your appreciation for the magic of love and travel.<br>
+Each photograph and story is a glimpse into our shared experiences, from the exhilarating highs of adventure to the quiet, cherished moments of togetherness.<br>
+Revisiting the memories, the laughter, and the awe-inspiring sights we've encountered on our journey of love. The challenge is can you remember Where in the world!<br>
 
    </p>
    
